--- a/recipe-search-frontend/package.json
+++ b/recipe-search-frontend/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.41.0",
     "drizzle-zod": "^0.7.1",
+    "lucide-react": "^0.486.0",
     "next": "15.2.4",
     "pg": "^8.14.1",
     "react": "^19.0.0",
